---
title: ER Diagram — ระบบจัดการบ่อบาดาลดิจิทัล
---
erDiagram

    users {
        INT UNSIGNED user_id PK "AUTO_INCREMENT"
        VARCHAR_150 email UK "NOT NULL, UNIQUE"
        VARCHAR_255 password_hash "NOT NULL, bcrypt"
        VARCHAR_150 full_name "NOT NULL"
        VARCHAR_20 phone "NULL"
        ENUM role "ADMIN | DRILLER, DEFAULT DRILLER"
        TIMESTAMP created_at "DEFAULT CURRENT_TIMESTAMP"
        TIMESTAMP updated_at "ON UPDATE CURRENT_TIMESTAMP"
    }

    customers {
        INT UNSIGNED customer_id PK "AUTO_INCREMENT"
        INT UNSIGNED user_id FK "NULL → users, NULL = มาจาก LINE"
        VARCHAR_100 line_user_id UK "NULL, LINE User ID"
        VARCHAR_150 customer_name "NOT NULL"
        VARCHAR_20 phone "NOT NULL"
        VARCHAR_20 phone_alt "NULL"
        TEXT address "NULL"
        VARCHAR_150 line_display_name "NULL"
        VARCHAR_500 line_picture_url "NULL"
        TIMESTAMP created_at "DEFAULT CURRENT_TIMESTAMP"
        TIMESTAMP updated_at "ON UPDATE CURRENT_TIMESTAMP"
    }

    wells {
        INT UNSIGNED well_id PK "AUTO_INCREMENT"
        INT UNSIGNED customer_id FK "NOT NULL → customers, RESTRICT"
        VARCHAR_150 well_name "DEFAULT 'บ่อหลัก'"
        TEXT address "NULL"
        DECIMAL_7_2 requested_depth_m "NULL"
        DECIMAL_7_2 total_depth_m "NULL"
        ENUM drilling_method "ROTARY|DTH|CABLE_TOOL|AUGER|JETTING|OTHER"
        ENUM formation_water_type "FRESH|BRACKISH|SALINE|UNKNOWN"
        DECIMAL_8_2 water_quantity_m3hr "NULL"
        DECIMAL_8_2 yield_lpm "NULL"
        DECIMAL_7_2 static_water_level_m "NULL"
        DECIMAL_7_2 pumping_water_level_m "NULL"
        VARCHAR_120 driller_name "NULL"
        DATE completion_date "NULL"
        DATE warranty_expire_date "GENERATED: completion_date + 2 YEAR"
        ENUM result "SUCCESS | FAIL, DEFAULT SUCCESS"
        TEXT failure_reason "NULL"
        TEXT notes "NULL"
        TIMESTAMP created_at "DEFAULT CURRENT_TIMESTAMP"
        TIMESTAMP updated_at "ON UPDATE CURRENT_TIMESTAMP"
    }

    well_strata_logs {
        INT UNSIGNED strata_id PK "AUTO_INCREMENT"
        INT UNSIGNED well_id FK "NOT NULL → wells, CASCADE"
        DECIMAL_7_2 depth_from_m "NOT NULL"
        DECIMAL_7_2 depth_to_m "NOT NULL, CHECK depth_to_m > depth_from_m"
        ENUM lithology_type "TOP_SOIL|CLAY|SAND|GRAVEL|LATERITE|SANDSTONE|SHALE|LIMESTONE|GRANITE|BASALT|HARDROCK|OTHER"
        VARCHAR_120 lithology_name "NULL"
        CHAR_7 color_hex "NULL"
        ENUM hardness "VERY_SOFT|SOFT|MEDIUM|HARD|VERY_HARD"
        TINYINT_1 water_bearing "DEFAULT 0"
        VARCHAR_255 description "NULL"
    }

    well_pipes {
        INT UNSIGNED pipe_id PK "AUTO_INCREMENT"
        INT UNSIGNED well_id FK "NOT NULL → wells, CASCADE"
        ENUM material "PVC|STEEL|STAINLESS_STEEL|HDPE|OTHER"
        ENUM pipe_type "CASING | SCREEN"
        DECIMAL_6_1 size_mm "NULL"
        DECIMAL_7_2 depth_from_m "NOT NULL"
        DECIMAL_7_2 depth_to_m "NOT NULL, CHECK depth_to_m > depth_from_m"
        INT UNSIGNED quantity "DEFAULT 1"
        TEXT notes "NULL"
    }

    well_pumps {
        INT UNSIGNED pump_id PK "AUTO_INCREMENT"
        INT UNSIGNED well_id FK "NOT NULL → wells, CASCADE"
        ENUM pump_type "AC_SUBMERSIBLE|DC_SOLAR_SUBMERSIBLE|OTHER"
        VARCHAR_100 brand "NULL"
        VARCHAR_100 pump_model "NULL"
        DECIMAL_5_2 horsepower "NULL"
        DECIMAL_5_2 power_kw "NULL"
        INT impeller_stages "NULL"
        DECIMAL_7_2 installation_depth_m "NULL"
        VARCHAR_20 voltage "NULL"
        INT phase "NULL"
        DECIMAL_6_1 discharge_size_mm "NULL"
        DECIMAL_8_2 rated_flow_m3hr "NULL"
        DECIMAL_7_2 rated_head_m "NULL"
        DATE installed_date "NULL"
        TEXT notes "NULL"
    }

    well_control_boxes {
        INT UNSIGNED control_box_id PK "AUTO_INCREMENT"
        INT UNSIGNED well_id FK "NOT NULL → wells, CASCADE"
        VARCHAR_100 brand "NULL"
        VARCHAR_100 model "NULL"
        VARCHAR_50 capacity "NULL"
        VARCHAR_50 voltage "NULL"
        ENUM protection_type "OVERLOAD_RELAY|CIRCUIT_BREAKER|AUTO_RESTART|WATER_LEVEL|LIGHTNING|NONE|OTHER"
        VARCHAR_255 features "NULL"
        DATE installed_date "NULL"
        TEXT notes "NULL"
    }

    pump_catalog_models {
        INT UNSIGNED model_id PK "AUTO_INCREMENT"
        VARCHAR_50 brand "NOT NULL FRANKLIN|TORQUE|..."
        VARCHAR_120 series "NULL  ชื่อซีรีส์"
        VARCHAR_150 model "NOT NULL  รุ่น/รหัสรุ่น"
        VARCHAR_20 bore_size "NULL  ขนาดบ่อ(นิ้ว)"
        VARCHAR_80 flow_rate "NULL"
        VARCHAR_80 motor_power "NULL  HP/kW"
        VARCHAR_30 phase "NULL  เฟส/แรงดัน"
        VARCHAR_50 discharge_size "NULL"
        VARCHAR_50 impeller_stages "NULL"
        VARCHAR_50 max_head_m "NULL"
        VARCHAR_120 material "NULL"
        VARCHAR_500 features "NULL"
        DECIMAL_12_2 reference_price "NULL  ราคาอ้างอิง(บาท)"
        TEXT notes "NULL"
        INT sort_order "DEFAULT 0"
        TINYINT_1 is_active "DEFAULT 1"
        TIMESTAMP created_at "DEFAULT CURRENT_TIMESTAMP"
        TIMESTAMP updated_at "ON UPDATE CURRENT_TIMESTAMP"
    }

    drilling_requests {
        INT UNSIGNED request_id PK "AUTO_INCREMENT"
        INT UNSIGNED customer_id FK "NOT NULL → customers, CASCADE"
        ENUM source "GOOGLE_FORM|MANUAL|LINE, DEFAULT GOOGLE_FORM"
        VARCHAR_150 name "NOT NULL"
        VARCHAR_20 phone "NOT NULL"
        TEXT address "NOT NULL"
        DECIMAL_7_2 requested_depth_m "NULL"
        DATE appointment_date "NULL — วันนัดหมาย (LIFF)"
        ENUM status "NEW|QUOTED|ACCEPTED|REJECTED|CANCELLED, DEFAULT NEW"
        TEXT notes "NULL"
        TIMESTAMP created_at "DEFAULT CURRENT_TIMESTAMP"
        TIMESTAMP updated_at "ON UPDATE CURRENT_TIMESTAMP"
    }

    drilling_jobs {
        INT UNSIGNED job_id PK "AUTO_INCREMENT"
        INT UNSIGNED request_id FK "NULL → drilling_requests, SET NULL"
        INT UNSIGNED customer_id FK "NOT NULL → customers, RESTRICT"
        INT UNSIGNED well_id FK "NULL → wells, SET NULL"
        ENUM status "QUEUED|DRILLING|SUCCESS|FAILED|CLOSED, DEFAULT QUEUED"
        ENUM result "SUCCESS | FAILED"
        TEXT failure_reason "NULL"
        VARCHAR_200 job_title "NULL"
        TEXT site_address "NULL"
        VARCHAR_80 province "NULL"
        VARCHAR_80 district "NULL"
        DATE scheduled_date "NULL = Queue Pool"
        VARCHAR_100 magic_link_token UK "NULL"
        DATETIME magic_link_expires_at "NULL"
        TEXT notes "NULL"
        TIMESTAMP created_at "DEFAULT CURRENT_TIMESTAMP"
        TIMESTAMP updated_at "ON UPDATE CURRENT_TIMESTAMP"
    }

    repair_requests {
        INT UNSIGNED repair_id PK "AUTO_INCREMENT"
        INT UNSIGNED customer_id FK "NOT NULL → customers, CASCADE"
        INT UNSIGNED well_id FK "NULL → wells, SET NULL"
        JSON problems "NOT NULL"
        TEXT detail "NULL"
        JSON photos "NULL"
        DATE scheduled_date "NULL"
        ENUM status "NEW|QUOTED|ACCEPTED|REJECTED|SCHEDULED|IN_PROGRESS|COMPLETED|CANCELLED, DEFAULT NEW"
        VARCHAR_100 magic_link_token UK "NULL"
        DATETIME magic_link_expires_at "NULL"
        TIMESTAMP created_at "DEFAULT CURRENT_TIMESTAMP"
        TIMESTAMP updated_at "ON UPDATE CURRENT_TIMESTAMP"
    }

    quotations {
        INT UNSIGNED quotation_id PK "AUTO_INCREMENT"
        ENUM kind "DRILLING | REPAIR, NOT NULL"
        INT UNSIGNED drilling_request_id FK "NULL → drilling_requests, RESTRICT"
        INT UNSIGNED repair_request_id FK "NULL → repair_requests, RESTRICT"
        DECIMAL_12_2 price "NOT NULL"
        ENUM status "PENDING|ACCEPTED|REJECTED, DEFAULT PENDING"
        TEXT notes "NULL"
        TIMESTAMP created_at "DEFAULT CURRENT_TIMESTAMP"
        TIMESTAMP updated_at "ON UPDATE CURRENT_TIMESTAMP"
    }

    repair_records {
        INT UNSIGNED record_id PK "AUTO_INCREMENT"
        INT UNSIGNED repair_id FK "NOT NULL → repair_requests, CASCADE"
        DECIMAL_12_2 final_price "NULL"
        TEXT work_details "NULL"
        JSON parts "NULL"
        JSON pump "NULL  ปั๊มที่ติดตั้งระหว่างซ่อม"
        VARCHAR_500 payment_slip_url "NULL"
        TINYINT_1 is_warranty_claim "DEFAULT 0"
        DATETIME completed_at "NULL"
        TIMESTAMP created_at "DEFAULT CURRENT_TIMESTAMP"
    }

    line_notifications {
        INT UNSIGNED notification_id PK "AUTO_INCREMENT"
        INT UNSIGNED customer_id FK "NOT NULL → customers, CASCADE"
        ENUM kind "QUOTE|STATUS|REMINDER|OTHER, NOT NULL"
        TEXT content "NULL"
        VARCHAR_100 line_message_id "NULL"
        ENUM status "SENT|FAILED, DEFAULT SENT"
        TIMESTAMP sent_at "DEFAULT CURRENT_TIMESTAMP"
    }

    %% ===== Relationships =====
    users ||--o{ customers : "ผู้ประกอบการเป็นเจ้าของ"
    customers ||--o{ wells : "มีบ่อ"
    wells ||--o{ well_strata_logs : "บันทึกชั้นดิน"
    wells ||--o{ well_pipes : "ติดตั้งท่อ"
    wells ||--o{ well_pumps : "ติดตั้งปั๊ม"
    wells ||--o{ well_control_boxes : "ติดตั้งกล่องคอนโทรล"
    customers ||--o{ drilling_requests : "แจ้งเจาะ"
    drilling_requests ||--o{ drilling_jobs : "สร้างคิว"
    drilling_jobs ||--o{ wells : "ลิงก์บ่อเมื่อเจาะสำเร็จ"
    customers ||--o{ repair_requests : "แจ้งซ่อม"
    repair_requests ||--o{ repair_records : "บันทึกหลังซ่อม"
    drilling_requests ||--o{ quotations : "kind=DRILLING"
    repair_requests ||--o{ quotations : "kind=REPAIR"
    customers ||--o{ line_notifications : "log ส่ง LINE"
